fix: small spacing tweak for body, border for footer

--- a/assets/css/base/base.css
+++ b/assets/css/base/base.css
@@ -1,13 +1,12 @@
 body {
 	color: var(--text);
 	background-color: var(--background);
+	padding: 0 var(--spacing-3);
 }
 
 a {
 	color: var(--text);
 }
-
-
 
 .flow > * + * {
   margin-top: var(--flow-space, --spacing-3);
