--- a/assets/css/layout/footer.css
+++ b/assets/css/layout/footer.css
@@ -1,4 +1,6 @@
 #footer {
+	border-top: 2px solid var(--secondary);
+
 	& nav {
 		display: flex;
 		gap: var(--spacing-3);
